--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1829,7 +1829,8 @@ width: 30px;
   color: #f66f01;
 }
 
-@media(min-width:1366px){
+/* duda */
+@media(min-width:1200px){
   #reconociendo .floro-cont{
     top: 25%;
   }
@@ -1841,7 +1842,7 @@ width: 30px;
 
 /*------------- Fin celebrando --------------------*/
 
-@media(min-width: 1200px) and (max-width:1440px){
+@media(min-width: 1200px) and (max-width:1399px){
   .floro-cont .texto{
     font-size: 13px !important;
   }
@@ -1876,10 +1877,108 @@ width: 30px;
   #reconociendo .floro .fondo{
     width: 400px;
   }
+
+
+  #reconociendo .floro .fondo{
+    width: 510px;
+    left: 2.045%; 
+  }
+
+  #celebrando .imagen-c img{
+    width: 331.66px;
+  }
+  #celebrando .imagen-c{
+    left: calc(52.5% - 165.83px);
+  }
+  #celebrando .floro .fondo{
+    width: 408px;
+    top: 10%;
+  }
+
+  #balanceando .imagen-c img{
+    width: 296.85px;
+  }
+  #balanceando .imagen-c{
+    left: calc(52.5% - 148.43px);
+  }
+  #balanceando .floro .fondo{
+    width: 376px;
+    left: 25%;
+  }
+
+  #desarrollando .imagen-c img{
+    width: 254.82px;
+  }
+  #desarrollando .imagen-c{
+    left: calc(52.5% - 127.41px);
+  }
+  #desarrollando .floro .fondo{
+    width: 510px;
+  }
+
+  #agradeciendo .imagen-c img{
+    width: 430.83px;
+  }
+  #agradeciendo .imagen-c{
+    left: calc(52.5% - 215.41px);
+  }
+  #agradeciendo .floro .fondo{
+    width: 448px;
+  }
+  #escuchando .imagen-c img{
+    width: 290.28px;
+  }
+  #escuchando .imagen-c{
+    left: calc(52.5% - 145.14px);
+  }
+  #escuchando .floro .fondo{
+    width: 377px;
+  }
+  #hablando .imagen-c img{
+    width: 329.03px;
+  }
+  #hablando .imagen-c{
+    left: calc(52.5% - 164.52px);
+  }
+  #hablando .floro .fondo{
+    /* width: 377px; */
+    width: 512px;
+    top: 4%;
+  }
+  #inspirando .floro-cont .texto{
+    line-height: unset;
+  }
+  #inspirando .imagen-c{
+    left: calc(55% - 334.555px);
+  }  
+  #inspirando .imagen-c img{
+    width: 669.11px;
+    bottom: -30px;
+  }
+  #inspirando .floro-cont{
+    top: 25%;
+  }
+
+
+  .mi-fila{
+    padding: 0 8%;
+  }
+
 }
+/* @media(min-width: 1400px) and (max-width: 1679px){
+  #reconociendo,
+  #celebrando,
+  #balanceando,
+  #desarrollando,
+  #agradeciendo,
+  #escuchando,
+  #hablando,
+  #inspirando{
+    min-height: 80vh;
+  }
+} */
 
-
-@media(min-width: 1920px){
+@media(min-width: 1680px){
   .imagen-c img,
   .floro .fondo{
     width: unset !important;
@@ -1983,9 +2082,103 @@ width: 30px;
 
 
 
-@media(min-height: 1025px){
+/* @media(min-height: 1025px){
   #celebrando{
-    min-height: 1024px;
+    min-height: unset;
     max-height: 1024px;
   }
+} */
+
+
+
+
+
+
+/* @media(min-width: 1400px) and (max-width: 1919px){
+  #reconociendo,
+  #celebrando,
+  #balanceando,
+  #desarrollando,
+  #agradeciendo,
+  #escuchando,
+  #hablando,
+  #inspirando{
+    min-height: 80vh;
+  }
 }
+  @media(min-width: 1920px){
+    #reconociendo,
+    #celebrando,
+    #balanceando,
+    #desarrollando,
+    #agradeciendo,
+    #escuchando,
+    #hablando,
+    #inspirando{
+      min-height: 979px;
+    }    
+  } */
+
+/*estoy en una patalla grande xd*/
+/* @media(min-width: 1366px) and (max-width: 1919px){
+  #reconociendo,
+  #celebrando,
+  #balanceando,
+  #desarrollando,
+  #agradeciendo,
+  #escuchando,
+  #hablando,
+  #inspirando{
+    min-height: 768px !important;
+  }
+} */
+
+
+/* hasta 1399px  si le reducimos el alto*/
+@media(min-width: 1920px) and (max-height: 978px){
+  #reconociendo,
+  #celebrando,
+  #balanceando,
+  #desarrollando,
+  #agradeciendo,
+  #escuchando,
+  #hablando,
+  #inspirando{
+    min-height: 1014px;
+  }
+}
+@media(min-width: 1200px) and (max-width:1366px) and (max-height: 666px){
+  #reconociendo,
+  #celebrando,
+  #balanceando,
+  #desarrollando,
+  #agradeciendo,
+  #escuchando,
+  #hablando,
+  #inspirando{min-height: 667px;}
+}
+
+@media(min-width: 1200px) and (max-width: 1919px) and (min-height: 769px){
+    #reconociendo,
+    #celebrando,
+    #balanceando,
+    #desarrollando,
+    #agradeciendo,
+    #escuchando,
+    #hablando,
+    #inspirando{
+      min-height: 768px;
+    }
+  }
+  @media(min-width: 992px) and (max-width: 1199px) and (min-height: 769px){
+    #reconociendo,
+    #celebrando,
+    #balanceando,
+    #desarrollando,
+    #agradeciendo,
+    #escuchando,
+    #hablando,
+    #inspirando{
+      min-height: 768px;
+    }
+  }
