--- a/public/css/lity.css
+++ b/public/css/lity.css
@@ -9,17 +9,17 @@
   bottom: 0;
   left: 0;
   white-space: nowrap;
-  /* background: #0b0b0b; */
-  background: #9bd8e9;
+  background: #0b0b0b;
+  /* background: #9bd8e9; */
   outline: none !important;
   opacity: 0;
-  -webkit-transition: opacity 0.3s ease;
-  -o-transition: opacity 0.3s ease;
-  transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.4s ease;
+  -o-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
 }
 .lity.lity-opened {
   /* opacity: 1; */
-  opacity: 0.98;
+  opacity: 0.97;
 }
 .lity.lity-closed {
   opacity: 0;
@@ -74,7 +74,15 @@
   max-width: 100%;
   max-height: 100%;
   outline: none !important;
+  transform: scale(0.95);
 }
+
+@media(min-width: 992px) and (max-width: 1199px){
+  .lity-container{
+    /* transform: scale(0.7); */
+  }
+}
+
 .lity-content {
   z-index: 9993;
   width: 100%;
@@ -139,6 +147,9 @@
   font-style: normal;
   font-weight: 600;
   transition: all 0.5s;
+}
+.lity-close img{
+  margin-top: -4.5px;
 }
 
 
