--- a/public/css/lity.css
+++ b/public/css/lity.css
@@ -9,7 +9,8 @@
   bottom: 0;
   left: 0;
   white-space: nowrap;
-  background: #0b0b0b;
+  /* background: #0b0b0b; */
+  background: rgba(11, 11, 11, 0.6);
   /* background: #9bd8e9; */
   outline: none !important;
   opacity: 0;
@@ -18,8 +19,8 @@
   transition: opacity 0.4s ease;
 }
 .lity.lity-opened {
-  /* opacity: 1; */
-  opacity: 0.97;
+  opacity: 1;
+  /* opacity: 0.97; */
 }
 .lity.lity-closed {
   opacity: 0;
@@ -81,6 +82,12 @@
   .lity-container{
     /* transform: scale(0.7); */
   }
+}
+
+/* esto :''V */
+ .lity-container {
+  width: 100%;
+  max-width: 1024px;
 }
 
 .lity-content {
