--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-/* ::-webkit-scrollbar {
-width: 30px;
-} */
-
 @font-face {
   font-family: 'Barlow';
    src: url("./fonts/Barlow/Barlow-Regular.ttf");
@@ -49,17 +45,12 @@ width: 30px;
    box-sizing: border-box;
  }
  
- .main-info {
- 
-   left: 18%;
- 
+ .main-info { 
+   left: 18%; 
  }
  
- .main {
- 
-   min-height: 100vh;
- 
- 
+ .main { 
+   min-height: 100vh; 
  }
  
  .decorate {
@@ -72,9 +63,13 @@ width: 30px;
    display: flex;
    justify-content: space-between;
    align-items: end;
- 
  }
- 
+ @media(min-width: 768px) and (max-width: 1199px){
+  .main-description_elovers {
+    margin-top: 15px;
+  }
+ }
+
  .main-description_elovers div p {
    margin-top: 5px;
  }
@@ -176,17 +171,14 @@ width: 30px;
    /* min-height: 100vh; */
  }
  
-
-
- .button-practices {
+ .button-practices{
    text-align: left;
    width: 150px;
    color: var(--white);
    background-color: var(--section-color);
    border:1px solid var(--white) ;
    margin-top: 10px;
-   height: 40px;
- 
+   height: 40px; 
  }
  
  .button-practices img {
