--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2575,27 +2575,56 @@
     }
     .container_reclutando{
       max-height: 670px;
+      /* height: 100vh; */
     }
-    #inspirando{
+    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
       max-height: 670px;
-      min-height: 670px;
-    }
-    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo{
-      max-height: 670px;
-      min-height: 670px;
+      /* min-height: 670px; */
+      height: 100vh;
     }    
   }
-/* 
+
+/*XL*/
   @media(min-width:1200px) and (max-width:1366px){
     .container_reclutando{
       max-height: 768px;
+      height: 100vh;
     }
-    #inspirando{
+    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
       max-height: 768px;
+      /* max-height: 768px; */
+      height: 100vh;
+    }   
+  }
+/* floro-cont 25% en alto*/
+  @media(min-width:1200px) and (max-width:1366px) and (min-height: 769px){
+    .container_reclutando{
+      min-height: 768px;
+    }    
+    #inspirando .floro-cont{
+      top: 45% !important;
+    }
+    #hablando .floro,#escuchando .floro,#agradeciendo .floro,#desarrollo .floro,#balanceando .floro,#celebrando .floro,#reconociendo .floro,#inspirando .floro{
+      top: 100px;
+    }
+    #celebrando .floro-cont{
+      top: 26%;
+    }
+    #reconociendo .imagen-c img{
+      width: 427px;
+    }
+
+    /* #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
+
+    }    */
+
+  }
+
+  @media(min-width:1200px) and (max-width:1366px) and (max-height: 767px){
+    .container_reclutando{
       min-height: 768px;
     }
-    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo{
+    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
       max-height: 768px;
-      min-height: 768x;
-    }   
-  } */
+    }       
+  }
