--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2565,24 +2565,11 @@
   /* #reconociendo .floro .fondo{
     /* top: -4%; */
     .separar{
-      top: -100px !important;
+      top: -95px !important;
     }    
    
   }
-  @media(max-width: 1199px){
-    .separar{
-      top: -80px !important;
-    }
-    .container_reclutando{
-      max-height: 670px;
-      /* height: 100vh; */
-    }
-    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
-      max-height: 670px;
-      /* min-height: 670px; */
-      height: 100vh;
-    }    
-  }
+
 
 /*XL*/
   @media(min-width:1200px) and (max-width:1366px){
@@ -2604,7 +2591,7 @@
     #inspirando .floro-cont{
       top: 45% !important;
     }
-    #hablando .floro,#escuchando .floro,#agradeciendo .floro,#desarrollo .floro,#balanceando .floro,#celebrando .floro,#reconociendo .floro,#inspirando .floro{
+    #hablando .floro,#escuchando .floro,#agradeciendo .floro,#desarrollo .floro,#balanceando .floro,#celebrando .floro,#reconociendo .floro{
       top: 100px;
     }
     #celebrando .floro-cont{
@@ -2613,18 +2600,45 @@
     #reconociendo .imagen-c img{
       width: 427px;
     }
-
-    /* #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
-
-    }    */
-
   }
-
   @media(min-width:1200px) and (max-width:1366px) and (max-height: 767px){
     .container_reclutando{
       min-height: 768px;
     }
     #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
-      max-height: 768px;
+      /* max-height: 768px; */
+      min-height: 768px;
+    }       
+  }
+
+  @media(max-width: 1199px){
+    .separar{
+      top: -80px !important;
+    }
+    .container_reclutando{
+      height: 100vh;
+      max-height: 670px;
+      /* height: 100vh; */
+    }
+    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
+      max-height: 670px;
+      height: 100vh;
+    }    
+  }
+
+  @media(max-width: 1199px) and (min-height:671px){
+    #inspirando .floro-cont{
+      top: 47% !important;
+    }
+    #hablando .floro,#escuchando .floro,#agradeciendo .floro,#desarrollo .floro,#balanceando .floro,#celebrando .floro,#reconociendo .floro{
+      top: 100px;
+    }    
+  }
+  @media(max-width: 1199px) and (max-height: 669px){
+    .container_reclutando{
+      min-height: 670px;
+    }
+    #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
+      min-height: 670px;
     }       
   }
