--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1353,7 +1353,23 @@
 #desarrollando-des .isActive span{
   color: #ff8334;
 }
-
+@media(max-width:1366px){
+  .card-carousel .card-carousel--card span{
+    font-size: 13px;
+  }
+  .main-practices__content .practices_title{
+    font-size: 1.5rem;
+  }
+  .practices_title_description{
+    font-size: 13px;
+  }
+  .download-files .evidencia{
+    font-size: 26px;
+  }
+  .practices_documents, .practices_videos, .practices_other_files{
+      font-size: 13px;
+  }
+}
 @media(min-width:1366px){
   #desarrollando .floro-cont{
     top: 18.25%;
@@ -2549,8 +2565,6 @@
     left: -6.5px !important;
     width: 36px !important;    
   }
-
-
   #reconociendo .imagen-c img{
     width: 407px;
   }
@@ -2564,11 +2578,14 @@
   }
   /* #reconociendo .floro .fondo{
     /* top: -4%; */
-    .separar{
-      top: -95px !important;
-    }    
+  .separar{
+    top: -95px !important;
+  }    
    
-  }
+  #homeprincipal .background_1{
+    min-height: 568px !important;
+  }  
+}
 
 
 /*XL*/
@@ -2579,9 +2596,8 @@
     }
     #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
       max-height: 768px;
-      /* max-height: 768px; */
       height: 100vh;
-    }   
+    }
   }
 /* floro-cont 25% en alto*/
   @media(min-width:1200px) and (max-width:1366px) and (min-height: 769px){
@@ -2600,17 +2616,22 @@
     #reconociendo .imagen-c img{
       width: 427px;
     }
+    /* #homeprincipal .background_1{
+      min-height: 568px !important;
+    } */
   }
-  @media(min-width:1200px) and (max-width:1366px) and (max-height: 767px){
+  @media(min-width:1200px) and (max-width:1366px) and (max-height: 666px){
     .container_reclutando{
-      min-height: 768px;
+      /* min-height: 768px; */
+      min-height: 667px
     }
     #hablando,#escuchando,#agradeciendo,#desarrollo,#balanceando,#celebrando,#reconociendo,#inspirando{
-      /* max-height: 768px; */
-      min-height: 768px;
+      /* min-height: 768px; */
+      min-height: 667px;
     }       
   }
 
+/*MD*/
   @media(max-width: 1199px){
     .separar{
       top: -80px !important;
@@ -2632,7 +2653,10 @@
     }
     #hablando .floro,#escuchando .floro,#agradeciendo .floro,#desarrollo .floro,#balanceando .floro,#celebrando .floro,#reconociendo .floro{
       top: 100px;
-    }    
+    }
+    /* #homeprincipal .background_1{
+      min-height: 568px !important;
+    }         */
   }
   @media(max-width: 1199px) and (max-height: 669px){
     .container_reclutando{
