--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2899,6 +2899,7 @@
   }
   #reconociendo .floro-cont h5{
     margin-left: 37% !important;
+    text-align: left !important;
   }
 }
 @media(max-width: 1199px){
